Added mobile view and improved responsiveness

--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "homepage": "https://sereneprince.github.io/noahpn/",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
+    "lint": "eslint .",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
